--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hari_careers-website</title>
   <style>
+    body{
+      font-family: Roboto;
+    }
     h1{
       font-size: 40px;
       font-family: Roboto;
@@ -31,28 +34,43 @@
     .bodytext{
       font-family: Roboto;
       color: rgb(80,80,80);
+      letter-spacing: 2px
     }
 
     #container{
       max-width: 720px;
       margin: 0 auto;
     }
+
+    .contact-button{
+      color: white;
+      background-color: #0c3fff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
   <div id="container">
-    <h1>ABC Careers</h1>
+    <h1>{{company_name}} Careers</h1>
     <img id="banner" src="static/clark-tibbs-oqStl2L5oxI-unsplash.jpg" height="320">
     <h2>About ABC Careers</h2>
     <p class="bodytext">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit.
-  
     </p>
-  
+    
     <h2>Open Positions</h2>
-    <p>TODO - Show the jobs here</p>
+
+    <div style='margin-bottom:16px;'>
+      {% for job in jobs %}
+        {% include 'jobitem.html'%}
+      {% endfor %}
+    </div>
+  
     <div style="text-align:center;">
-      <button>Contact us</button>
+      <button class='contact-button'>Contact Us</button>
     </div>
     
   </div>
